# odn

./: .gitignore  .pylintrc  MANIFEST.in  README.md  setup.cfg
code/: 8. Object Detection -Fundus.ipynb  README.md  filelist.txt  fundus_sample.pdn
code/src/odn/: rois.txt
data/coco128/labels/: train2017.cache
data/fundus/: BirthWeight_null_purged.csv  GestationalAgeWeek_null_purged.csv  images_public.cache  labels.cache  test.txt  test2.txt  test_public.txt  testx.txt  train.txt  train_public.txt  trainx.txt
data/fundus/images/: anno2.json  raw.json
data/fundus/label/: test.txt  train.txt
data/fundus_raw/: all_labels.csv
data/fundus_raw/images/: curated.json
data/raccoon/: draw boxes.ipynb  raccoon_labels.csv
notebooks/: 8.2 Object Detection - WebCam.ipynb  8.4 Object Detection - Fundus - TF-SSD.ipynb  8.6 Object Detection - Darkflow YOLO2.ipynb  8.6 Object Detection - YOLO2.ipynb  8.9 Object Detection - Torch YOLO5.ipynb
notebooks/.ipynb_checkpoints/: 8.2 Object Detection - WebCam-checkpoint.ipynb  8.6 Object Detection - YOLO2-checkpoint.ipynb
notebooks/data_aug/: demo.ipynb
src/odn/: README.md  __init__.py  camera.py  candidate_rois.txt  config.pickle  filelist.tmp.txt_candidate_rois.txt  frcnn.py  fundus.py  gui.py  metrics.py  mobilenetv2_rpn_loss_history.txt  models.txt  rois.txt  rois_naive.txt  test.txt  test2.rois.txt  test2.txt_candidate_rois.txt  test_frcnn.py  test_frcnn2.py  test_voc.py  toastx.py  train.txt  train_frcnn.py  train_rpn.py  training_log.txt  utilities.py  utils.py  vgg_rpn_loss_history.txt  waiting_frame.py  yolo.py
(+382 files in other folders)
