[metadata]
name = odn
version = 0.3.4
author = Yinsheng Zhang (Ph.D.)
author_email = oo@zju.edu.cn
description = A python library for object detection neural networks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zhangys11/odn
project_urls =
    Bug Tracker = https://github.com/zhangys11/odn/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)   
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    scikit-learn
    scipy
    uuid
    pandas
    matplotlib
    numpy
    plotly
    # tensorflow-gpu 1.x # we don't add this to avoid polluting user env
    keras
    opencv-python
    tf-slim
    six
    cython
    # pycocotools

[options.packages.find]
where = src

[options.package_data]
# If any package or subpackage contains *.png, *.jpg, ... files, include them:
* = *.png, *.jpg, *.pyx, *.c, *.pyd, *.txt, *.pbtxt, *.config, *.csv, *.yaml